# WhistleDetector

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt  setup.py
src/whistle_detector/: audio_processing.py  stream_processing.py
test/: sample_scripts.py  sample_usage.py  test_transcription.py
test/test_data/: sample.weba  whistle_sample_twinkle.weba
test/test_output/: old_pyproject.toml  whistle_sample_16k.mid  whistle_sample_stairwaytoheaven.mid  whistle_sample_walklikeegyptian.mid
whilstle2midi/: audio_processing.py  note_detector.py  recorder.py
