[project]
name = "whistle-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "kkawabat",email = "kkawabat@asu.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "midiutil (>=1.2.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "kaudio-library @ git+https://github.com/kkawabat/KaudioLibrary.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
